--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ group                = org.kordamp.gradle
 sourceCompatibility  = 1.8
 targetCompatibility  = 1.8
 
-jandexVersion        = 2.4.3.Final
+jandexVersion        = 3.0.0
 kordampPluginVersion = 0.46.0
 kordampBuildVersion  = 2.5.0
 
